<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@color/colorPrimaryDark">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" >

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        >

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_login_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:layout_marginTop="10dp"
            android:textColorHint="@android:color/darker_gray"
            app:hintTextColor="@android:color/darker_gray"
            app:hintAnimationEnabled="true"
            android:background="@color/colorPrimary"
            app:startIconDrawable="@drawable/ic_email"
            app:startIconTint="@color/colorAccent"
            app:boxStrokeColor="?attr/colorAccent"
            android:backgroundTint="@android:color/transparent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_login"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:theme="@style/Widget.AppTheme.TextInputLayout.FilledBox"
                android:textColor="@android:color/white"
                android:inputType="textEmailAddress"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_login_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:layout_marginTop="10dp"
            android:textColorHint="@android:color/darker_gray"
            app:hintTextColor="@android:color/darker_gray"
            android:background="@color/colorPrimary"
            app:startIconDrawable="@drawable/ic_password"
            app:endIconMode="password_toggle"
            app:startIconTint="@color/colorAccent"
            app:boxStrokeColor="?attr/colorAccent"
            android:backgroundTint="@android:color/transparent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_login"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:theme="@style/Widget.AppTheme.TextInputLayout.FilledBox"
                android:textColor="@android:color/white"
                android:inputType="textPassword"/>

        </com.google.android.material.textfield.TextInputLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/login_btn"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/login"
                android:textColor="@color/colorRedLight"
                app:strokeColor="@color/colorRedLight"
                app:rippleColor="@color/colorRippleButtons"
                />

            <ProgressBar
                android:id="@+id/login_progress_bar"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_centerInParent="true"
                android:visibility="gone"/>

        </RelativeLayout>


    </LinearLayout>

</RelativeLayout>